--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "canvas-fc",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,11 +30,17 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "5.0.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "ts-standard": "^11.0.0",
     "tsup": "^6.1.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
-  }
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/App.js",
+  "types": "dist/App.d.ts"
 }
