--- a/package.json
+++ b/package.json
@@ -42,5 +42,14 @@
     "dist"
   ],
   "main": "dist/App.js",
-  "types": "dist/App.d.ts"
+  "types": "dist/App.d.ts",
+  "author": {
+    "name": "David Y. Stephenson",
+    "email": "david@davidystephenson.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davidystephenson/canvas-fc"
+  },
+  "license": "Unlicense"
 }
