--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "package": "tsup"
+    "package": "tsup",
+    "patch": "yarn pack && npm version patch && npm publish"
   },
   "eslintConfig": {
     "extends": [
