--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "react-scripts": "5.0.1",
     "ts-standard": "^11.0.0",
     "tsup": "^6.1.3",
     "typescript": "^4.4.2",
+    "user": "^0.0.0",
     "web-vitals": "^2.1.0"
   },
   "files": [
