--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "package": "tsup",
-    "patch": "yarn pack && npm version patch && npm publish"
+    "package": "tsup"
   },
   "eslintConfig": {
     "extends": [
@@ -37,7 +36,6 @@
     "ts-standard": "^11.0.0",
     "tsup": "^6.1.3",
     "typescript": "^4.4.2",
-    "user": "^0.0.0",
     "web-vitals": "^2.1.0"
   },
   "files": [
